transparent windows added

--- a/views/page1.html
+++ b/views/page1.html
@@ -89,6 +89,11 @@
             stroke(50)
             strokeWeight(20)
 
+
+            drawCircle(resultingVector.x + serverwinstate.page2.width / 2, resultingVector.y + serverwinstate.page2.height / 2)
+
+
+
             line(point1[0], point1[1], resultingVector.x + serverwinstate.page2.width / 2, resultingVector.y + serverwinstate.page2.height / 2)
 
         }
