--- a/views/page2.html
+++ b/views/page2.html
@@ -96,6 +96,10 @@
             stroke(50)
             strokeWeight(20)
 
+
+            drawCircle(resultingVector.x + serverwinstate.page1.width / 2, resultingVector.y + serverwinstate.page1.height / 2)
+
+
             line(point2[0], point2[1], resultingVector.x + serverwinstate.page1.width / 2, resultingVector.y + serverwinstate.page1.height / 2)
 
         }
